manifests/dev/cilium/CiliumClusterwideNetworkPolicy-default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny
spec:
  description: Deny all pod traffic not allowed by another policy; allow DNS to CoreDNS.
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: coredns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: '*'
  enableDefaultDeny:
    egress: true
    ingress: true
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
