manifests/dev/cilium/CiliumNetworkPolicy-hubble-relay.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-relay
  namespace: kube-system
spec:
  egress:
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
  endpointSelector:
    matchLabels:
      k8s-app: hubble-relay
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s-app: hubble-ui
      toPorts:
        - ports:
            - port: "4245"
              protocol: TCP
